--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,12 @@
 Summary of important user-visible changes for releases of the control package
 
 ===============================================================================
+control-4.2.1+  Upcoming version 4.2.2, not yet released
+===============================================================================
+
+**
+
+===============================================================================
 control-4.2.1  Release date 2026-01-20
 ===============================================================================
 
